ipc/ipdl/test/ipdl/ok/PSyncSyncManagee.ipdl
include protocol PSyncSyncManager;

sync protocol PSyncSyncManagee {
    manager PSyncSyncManager;
child:
    async __delete__();
};
