ipc/ipdl/test/ipdl/error/AsyncInsideSync.ipdl
// inside_sync nested messages must be sync

protocol AsyncInsideSync {
child:
    nested(inside_sync) async Msg();
};
